--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "server": "nodemon index.js",
-    "start": "concurrently \"npm run server\" \"cd ../client && npm start\"",
+    "start": "node index.js",
     "seed": "node seed.js"
   },
   "keywords": [],
